--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asn1crypto==1.5.1
 babel==2.17.0
+bcrypt==5.0.0
 blinker==1.9.0
 casbin==1.43.0
 cbor2==5.7.1
@@ -10,6 +11,7 @@ dnspython==2.8.0
 email-validator==2.3.0
 Flask==3.1.2
 flask-babel==4.0.0
+Flask-Bcrypt==1.0.1
 Flask-Blog==0.0.1
 Flask-Exts==0.2.5
 Flask-Login==0.6.3
